# tts_server

./: .gitattributes  README.md  pyproject.toml  tts_server.py
MeloTTS/: pyproject.toml
MeloTTS/melo/text/: korean.py
utils/: __init__.py  audio_converter.py  tts.py
