[project]
name = "kokoro-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=14.3.0",
    "kokoro-onnx>=0.4.8",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "misaki>=0.9.4",
    "pydub>=0.25.1",
    "sounddevice>=0.5.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.67.1",
    "zmq>=0.0.0",
]

[tool.uv.workspace]
members = [
    "MeloTTS",
]
